--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,27 @@
 <h1>Form</h1>
+<% 
+=begin %>
 
-<form action="/users" method="POST" accept-charset="utf-8">
-  <label for="username">Username:</label>
-  <input type="text" id="username" name="user[username]"><br><br>
-  <label for="email">Email:</label>
-  <input type="text" id="email" name="user[email]"><br><br>
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="user[password]"><br><br>
-  <input type="submit" value="Submit">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-</form> 
+
+ <form action="/users" method="POST" accept-charset="utf-8">
+   <label for="username">Username:</label>
+   <input type="text" id="username" name="user[username]"><br><br>
+   <label for="email">Email:</label>
+   <input type="text" id="email" name="user[email]"><br><br>
+   <label for="password">Password:</label>
+   <input type="password" id="password" name="user[password]"><br><br>
+   <input type="submit" value="Submit">
+   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+ </form> 
+<% 
+=end %>
+
+<%= form_tag("/users", method: "post") do %>
+  <%= label_tag(:username, "username:") %>
+  <%= text_field_tag(:username) %><br><br>
+  <%= label_tag(:email, "email:") %>
+  <%= email_field(:user, :email) %><br><br>
+  <%= label_tag(:password, "password:") %>
+  <%= password_field_tag(:password) %><br><br>
+  <%= submit_tag("submit") %>
+<% end %>
