--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,6 @@
 <h1>Form</h1>
 <% 
 =begin %>
-
-
  <form action="/users" method="POST" accept-charset="utf-8">
    <label for="username">Username:</label>
    <input type="text" id="username" name="user[username]"><br><br>
@@ -13,9 +11,6 @@
    <input type="submit" value="Submit">
    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
  </form> 
-<% 
-=end %>
-
 <%= form_tag("/users", method: "post") do %>
   <%= label_tag(:username, "username:") %>
   <%= text_field_tag(:username) %><br><br>
@@ -24,4 +19,22 @@
   <%= label_tag(:password, "password:") %>
   <%= password_field_tag(:password) %><br><br>
   <%= submit_tag("submit") %>
+<% end %>
+<%
+=end %>
+
+<%= form_for @user do |f| %>
+    <p>
+        Your username here:<br>
+        <%= f.text_field :username, value: "che & marcos" %>
+    </p>
+    <p>
+        Your email here:<br>
+        <%= f.email_field :email, placeholder: "example@example.com" %>
+    </p>
+    <p>
+        <%= f.label :password %><br>
+        <%= f.password_field :password %>
+    </p>
+    <%= f.submit "Create" %>
 <% end %>
