--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,41 +1,2 @@
 <h1>Create user</h1>
-<% 
-=begin %>
- <form action="/users" method="POST" accept-charset="utf-8">
-   <label for="username">Username:</label>
-   <input type="text" id="username" name="user[username]"><br><br>
-   <label for="email">Email:</label>
-   <input type="text" id="email" name="user[email]"><br><br>
-   <label for="password">Password:</label>
-   <input type="password" id="password" name="user[password]"><br><br>
-   <input type="submit" value="Submit">
-   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
- </form>
-
-<%= form_tag("/users", method: "post") do %>
-  <%= label_tag(:username, "username:") %>
-  <%= text_field_tag(:username) %><br><br>
-  <%= label_tag(:email, "email:") %>
-  <%= email_field(:user, :email) %><br><br>
-  <%= label_tag(:password, "password:") %>
-  <%= password_field_tag(:password) %><br><br>
-  <%= submit_tag("submit") %>
-<% end %>
-<%
-=end %>
-
-<%= form_for @user do |f| %>
-    <p>
-        Your username here:<br>
-        <%= f.text_field :username, value: "che & marcos" %>
-    </p>
-    <p>
-        Your email here:<br>
-        <%= f.email_field :email, placeholder: "example@example.com" %>
-    </p>
-    <p>
-        <%= f.label :password %><br>
-        <%= f.password_field :password %>
-    </p>
-    <%= f.submit "Create" %>
-<% end %>
+<%=render partial:'form'%>
