--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,17 +24,7 @@
 =end %>
 
 <%= form_for @user do |f| %>
-<% if @user.errors.any? %>
-<div id="error_explanation">
-<h2><%= pluralize(@user.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-<ul>
-    <% @user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-    <% end %>
-</ul>
-</div>
-<% end %>
+    <%= show_errors(@user) %>
 <div>
     <div>
     <%= f.label :your_username_here %><br>
